--- a/NETMonitoring/src/main/resources/edu/emu/netmonitoring/fxml/dashboard.fxml
+++ b/NETMonitoring/src/main/resources/edu/emu/netmonitoring/fxml/dashboard.fxml
@@ -45,9 +45,9 @@
       <Pane fx:id="sideMenu" prefHeight="715.0" prefWidth="229.0" style="-fx-background-color: #522888;" styleClass="sideMenu" BorderPane.alignment="CENTER">
          <children>
             <Label alignment="CENTER" prefHeight="174.0" prefWidth="228.0" />
-            <ImageView fx:id="imgLogo" cache="true" fitHeight="140.0" fitWidth="160.0" layoutX="30.0" layoutY="30.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fx:id="imgLogo" cache="true" fitHeight="121.0" fitWidth="117.0" layoutX="56.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="@../img/NMLogo.jpg" />
+                  <Image url="@../img/LogoProj.jpeg" />
                </image>
                <effect>
                   <DropShadow blurType="GAUSSIAN" height="113.42" radius="55.332499999999996" width="109.91">
@@ -60,7 +60,7 @@
                   <Rectangle2D />
                </viewport>
             </ImageView>
-            <VBox layoutX="29.0" layoutY="174.0" prefHeight="343.0" prefWidth="197.0" spacing="10.0" style="-fx-background-color: #522888;">
+            <VBox layoutY="174.0" prefHeight="459.0" prefWidth="230.0" spacing="10.0" style="-fx-background-color: #522888;">
                <children>
                   <Button fx:id="btnDashboard" alignment="BASELINE_LEFT" mnemonicParsing="false" onAction="#homePanel" prefHeight="53.0" prefWidth="220.0" style="-fx-background-color: transparent;" styleClass="sideMenuItem" text="Home">
                      <font>
