--- a/NETMonitoring/src/main/resources/edu/emu/netmonitoring/fxml/welcome.fxml
+++ b/NETMonitoring/src/main/resources/edu/emu/netmonitoring/fxml/welcome.fxml
@@ -63,6 +63,9 @@
                <cursor>
                   <Cursor fx:constant="HAND" />
                </cursor>
+               <effect>
+                  <Glow level="0.7" />
+               </effect>
             </Button>
       </children>
     </AnchorPane>
