LoadingScreen loading bar color changed to purple

--- a/NETMonitoring/src/main/resources/edu/emu/netmonitoring/fxml/LoadingScreen.fxml
+++ b/NETMonitoring/src/main/resources/edu/emu/netmonitoring/fxml/LoadingScreen.fxml
@@ -1,15 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ProgressBar?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.VBox?>
-<?import javafx.scene.text.Font?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="272.0" prefWidth="510.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="272.0" prefWidth="510.0" xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1">
     <children>
         <VBox alignment="CENTER" layoutY="-3.0" maxHeight="-1.0" maxWidth="-1.0" prefHeight="280.0" prefWidth="510.0" style="-fx-background-color: linear-gradient(to left bottom, #021634, #2d1946, #581149);">
             <ImageView fitHeight="200.0" fitWidth="200.0">
@@ -17,13 +14,17 @@
                     <Image url="@../Downloads/480logo.png" />
                 </image>
             </ImageView>
-            <Label blendMode="SOFT_LIGHT" prefHeight="49.0" prefWidth="258.0" text="NetMonitoring">
+            <Label blendMode="SOFT_LIGHT" prefHeight="55.0" prefWidth="270.0" text="NetMonitoring">
                 <font>
                     <Font name="System Bold" size="38.0" />
                 </font>
             </Label>
             <!-- Progress Bar -->
-            <ProgressBar prefWidth="400" prefHeight="20" />
+            <ProgressBar prefHeight="20" prefWidth="400" style="-fx-accent: #8e44ad;">
+                <opaqueInsets>
+                    <Insets />
+                </opaqueInsets>
+            </ProgressBar>
         </VBox>
     </children>
 </AnchorPane>
